--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -7,7 +7,7 @@ library(phdFunctions)
 library(knitr)
 library(kableExtra)
 library(tidyverse)
-source('scripts/05_ukbb_filteredSnps.R')
+source('scripts/05_ukbb_filteredSnps.R') # load in the filtered results for the age,sex,bmi adjusted gwases  (P < 1e-5, nchar(A1) == 1)
 knitr::opts_chunk$set(echo = FALSE)
 models <- readRDS('data/Ukbiobank/pheno_models.RDS')
 pheno_models <- bind_rows(lapply(models, function(x){cbind(adjuster = x$adjuster,broom::glance(x$model))})) %>% arrange(AIC)
@@ -32,20 +32,10 @@ genelists <- data.frame(pheno = c(rep("obesity", length(obesity_GR$SYMBOL)), rep
 ukbio_gout <- bd_refined_gout %>% filter(f.eid %in% fam$V2) %>% select(goutaff, 'age' = f.21003.0.0,"bmi" = f.21001.0.0, 'sex' = f.31.0.0, 'height' = f.50.0.0, 'waist' = f.48.0.0, 'hip' = f.49.0.0, 'eth' = f.21000.0.0, febuxostat, allopurinol, colchicine, sulphinpyrazone, gouthosp, goutwinnard, goutself, gout_winnard_self, gout_self_ult, goutself, goutult ) %>% mutate(waist_height_ratio = waist / height, sex_factor = factor(if_else(sex == 0, "female", "male", missing = NULL)), cc = if_else(goutaff == 1, "case", "control", missing = NULL), waist_hip_ratio = waist / hip) %>% filter(!is.na(goutaff) & eth %in% c(1001,1002,1003)) %>% group_by(cc) 
 ```
 
+This chapter investigates the performance of different gout case definitions on \gls{gwas}. It also looks at how selection statistics could be used for the prioritisation of variants from \gls{gwas}.
 
-This chapter is about using the results of selection analyses to better inform \gls{gwas}
+Part of these results have been published as part of @Cadzow2017 and include the gout definition testing, heritability of gout, and the replication of the @Kottgen2013 results for gout, using the UK Biobank data. The results and discussion from this paper have been included and expanded on.
 
-The first section of this chapter has been published as part of @Cadzow2017
-
-The UK Biobank provides a unique opportunity
-
-objectives:
-- Investigate the performance of gout definitions on association studies
-- Investigate the use of association studies in conjunction with selection analyses
-
-
-
-Selection, GWAS, and Imputation of Polynesian Populations
 
 
 useful papers:
@@ -63,40 +53,33 @@ Improvement gwas through the use of imputation:
 - HRC panel paper
 
 refer to gwas done by ukbio in all phenotypes and say it looks similar
+
 ## Association studies for Gout
 
 ### Performance of gout definitions
 
-Part of this work has been published in @Cadzow2017.
-
-This section describes the gout GWAS performed in the UKBiobank data and the comparison with the results from the selection analysis in the 1000 Genomes Project data.
-
-
-
 _genome-wide association studies_
 
-Genome-wide association studies provide a statistical framework for an association analysis between a phenotype of interest, and a genotypes of a genetic marker, usually using linear regression for a continuous trait, or logistic regression for a dichotomous trait. The association test, in a \gls{gwas} context, is repeated for all available markers across the genome.
+Genome-wide association studies provide a statistical framework for an association analysis between a phenotype of interest, and a genotypes of a genetic marker, usually using linear regression for a continuous trait, or logistic regression for a dichotomous trait [\@ref]. The association test, in a \gls{gwas} context, is repeated for all available markers across the genome. In epidemiological studies the use of an accurate case definition is important. There is variation in the gout definitions used from the multi-purpose cohort studies that are used for genetic analysis, some well known cohorts include the Wellcome Trust case-control consortium cohort, the Atherosclerosis risk in the community study, and the Framingham Heart Study [@Burton2007;@Aric1989; @Splansky2007]. 
 
-_Introduction of ukbiobank_
+The use of a consistent case definition is also important for comparisons between cohorts, this can be done by combining the genetic data and performing the \gls{gwas}. Another common way of combining genetic association studies is through meta-analysis. In both instances, having the same case definitions between studies reduces the variation. Power of genetic case-control studies increases with accurate case definition. This means that there are the maximum number of cases, and the maximum number of disease free controls [@Colhoun2003]. For gout, the gold standard case definition is the mono-sodium urate crystals in the synovial fluid of the joint [@Wallace1977a]. A substitute for crystals in the synovial fluid is the \gls{acr} criteria [@Wallace1977a]. The criteria require a minimum of six of twelve conditions to be met. It is uncommon for multi-purpose cohorts to report either the gold-standard, or \gls{acr} criteria, but instead, for a self-report diagnosis of conditions and diseases to be reported.
 
-The UK Biobank is a publicly available data set consisting of 500,000 individuals, mostly of European ancestry, from around the United Kingdom, aged between 40 and 69. It contains genetic, health, and lifestyle information. As part of the UK Biobank collection process, participants filled in detailed surveys on health and lifestyle questions, provided biological samples, and provided access to administrative health records.
-
-
-_Motivation behind using the different definitions_
-
-In epidemiological studies the use of an accurate case definition is important. There is variation in the gout definitions used from the multi-purpose cohort studies that are used for genetic analysis, some well known cohorts include the Wellcome Trust case-control consortium cohort, the Atherosclerosis risk in the community study, and the Framingham Heart Study [@Burton2007;@Aric1989; @Splansky2007]. 
-
-The use of a consistent case definition is also important for comparisons between cohorts, this can be done by combining the genetic data and performing the \gls{gwas}. Another common way of combining genetic association studies is through meta-analysis. In both instances, having the same case definitions between studies reduces the variation. Power of genetic case-control studies increases with accurate case definition. This means that there are the maximum number of cases, and the maximum number of disease free controls [\@ref]. For gout, the gold standard case definition is the mono-sodium urate crystals in the synovial fluid of the joint [\@ref]. A substitute for crystals in the synovial fluid is the \gls{acr} criteria [@Wallace1977a]. The criteria require a minimum of six of twelve conditions to be met. It is uncommon for multi-purpose cohorts to report either the gold-standard, or ACR criteria, but instead, for a self-report diagnosis of conditions and diseases to be reported. The UK Biobank includes the self-report diagnoses that were collected by survey at the time of recruitment, but it also has hospital admission information, for both primary and secondary diagnosis.  
-
-
-
+The UK Biobank is a publicly available data set consisting of 500,000 individuals, mostly of European ancestry, from around the United Kingdom, aged between 40 and 69. It contains genetic, health, and lifestyle information. As part of the UK Biobank collection process, participants filled in detailed surveys on health and lifestyle questions, provided biological samples, and provided access to administrative health records. The UK Biobank includes the self-report diagnoses that were collected by survey at the time of recruitment, but it also has hospital admission information, for both primary and secondary diagnosis. This collection of both self-report information combined with hospital admission information provides a unique opportunity in a large cohort to investigate possible gout definitions and their influence on \gls{gwas}.
 
 
 ### Polynesian associations with gout
 
-Phipps-Green2016
+As has been previously mentioned (sections \@ref{intro}, \@ref(chapter4)), New Zealand Polynesians have an increased prevalence of a gout and metabolic disease [@Winnard2013]. Of the 28 genetic variants associated with serum urate levels that have been previously reported in European populations, 17 also had significant associations with gout [@Kottgen2013]. In the New Zealand Polynesian population, XXX have replicated the association with gout, with some Polynesian specific effects being noted [@Phipps-Green2016]. The inherent higher prevalence of gout in Polynesian populations but lack of adequate sample sizes to perform \gls{gwas} with sufficient power to detect loci, other than the main effect loci of _ABCG2_ and _SLC2A9_, means that extra approaches are needed to find additional evidence of to help reduce the number of false negative results.
+
 
 ### Use of selection statistics to inform GWAS
+
+\gls{gwas} in the last few years have required to have larger and larger cohorts, in a race to discover the source of 'missing heritability' [\@ref]. The requirement for larger cohorts comes from the inverse relationship between effect-size and statistical power. The source of missing heritability is thought to be found in the polygenic effects of many small effect genetic variants [\@ref]. \gls{gwas} also suffer from the need to control the false positive rate and as such have a stringent assocation significance threshold [\@ref]. One of the side-effects of this threshold is that variants that have a true effect but due to cohort size do not reach statistical significance are lost in the 'noise' of the \gls{gwas} signal. One of the possibilities to be able to identify such variants is to use methodologies that capture the non-additive genetic variance and pair this with the \gls{gwas}. The use of selection statistics in combination with \gls{gwas} is one of these methodologies that can be appled to prioritise \gls{gwas} results [\@ref].
+
+### Objectives
+
+- Test performance of gout definitions on \gls{gwas}
+- Investigate the use of selection statistics in conjunction with \gls{gwas}
 
 ## Methods
 
@@ -109,7 +92,7 @@ Inclusion criteria were European ethnicity, aged between 40 and 69 years and had
 
 Individuals from the UK Biobank cohort were genotyped on an Axiom array with 820,967 markers (Affymetrix, Santa Clara, CA, USA). The genotypes were phased using SHAPEIT3, and then imputed using IMPUTE2 with both the UK10K impute reference panel^[https://www.uk10k.org], and the haplotype reference consortium impute panel [@McCarthy2016], to bring the total number of \glspl{snp} to approximately 73.3 million. Genotyping, phasing, and imputation were performed by the UK Biobank.
 
-#### Classifications used
+#### Gout definitions
 
 There were four main classification criteria that were used to define gout cases. _Hospital defined gout_ involved either a primary or secondary hospital diagnosis for gout (ICD-10 code M10, including sub-codes). _Self-report of gout_ was defined as reporting having gout at the time of the study interview. _Use of \gls{ult}_ used self-report data for the use of allopurinol, febuxostat, or sulphinpyrazone, and not having a hospital diagnosis of leukemia or lymphoma (ICD-10 codes C81-C96). _Winnard defined gout_ was based on @Winnard2012 and consisted of a hospital diagnosis of gout, or self report of gout specific medication (\gls{ult} or colchicine). The largest number of people were classified through either self-report or the use of urate lowering therapy (Figure \@ref(fig:ukbbupsetplot)). Additional exclusion criteria were applied to participants not classified as having gout from these definitions. The criteria were cortico-steroidal use, non-steroidal anti-inflammatory drug use or probenicid use. 
 
@@ -198,7 +181,7 @@ A \gls{gwas} was also performed for individuals with Polynesian ancestry. Gout a
 <!--     - excluded unknown gout status, non-polynesian (either self-report or PCA mismatch), and people <18 years old -->
 
 
-The \gls{gwas} was adjusted for age, sex, and the first ten \glspl{pc} calculated from 2,858 ancestry informative markers (as identified by Illumina). Markers were filtered to remove if the minor allele frequency was less than 0.01, or had an \gls{hwe} chi-squared exact test P > 1x10^-6^. The \gls{gwas} was conducted by Dr Tanya Major(Merriman Lab).
+The \gls{gwas} was adjusted for age, sex, and the first ten \glspl{pc} calculated from 2,858 ancestry informative markers (as identified by Illumina). Markers were filtered to remove if the minor allele frequency was less than 0.01, or had an \gls{hwe} chi-squared exact test P > 1x10^-6^. The \gls{gwas} was conducted by Dr Tanya Major(Merriman Lab) using Plink v1.9b.
 
 
 
@@ -342,72 +325,88 @@ gwas_annotate <- function(df){
 }
 
 
+top_snps <-list()
+top_snps$hosp <- gwas_annotate(hosp_asb)
+top_snps$self <- gwas_annotate(self_asb)
+top_snps$selfult <- gwas_annotate(selfult_asb)
+top_snps$winnard <- gwas_annotate(winnard_asb)
+top_snps$ult <- gwas_annotate(ult_asb)
+
 nom_snps <-list()
-nom_snps$hosp <- gwas_annotate(hosp_asb)
-nom_snps$self <- gwas_annotate(self_asb)
-nom_snps$selfult <- gwas_annotate(selfult_asb)
-nom_snps$winnard <- gwas_annotate(winnard_asb)
-nom_snps$ult <- gwas_annotate(ult_asb)
+nom_snps$hosp <- hosp_asb %>% filter(P < 1e-5) %>% pull(SNP)
+nom_snps$self <- self_asb %>% filter(P < 1e-5) %>% pull(SNP)
+nom_snps$selfult <- selfult_asb %>% filter(P < 1e-5) %>% pull(SNP)
+nom_snps$winnard <- winnard_asb %>% filter(P < 1e-5) %>% pull(SNP)
+nom_snps$ult <- ult_asb %>% filter(P < 1e-5) %>% pull(SNP)
 ```
 
-There were a total of ten top \glspl{snp} from seven genes that were associated with gout at a genome-wide significance threshold, across the definitions used (Table \@ref(tab:ukgwas)). The top \gls{snp} for each locus differed between definitions for _GCKR_ and _SLC2A9_, and _SLC22A12_. _GCKR_ had the top \gls{snp} for self-report of gout, self-report of gout or \gls{ult} use, or \gls{ult} use all had the top \gls{snp} as rs780093, whereas the top \gls{snp} for the Winnard definition was rs780094. The top \gls{snp} was rs9994216 in _SLC2A9_ for the self-reported gout definition, and rs4697701 for the \gls{ult} usage, self-report of gout, and the Winnard definitions. _SLC22A12_ had rs11231837 for the top \gls{snp} for the self-reported gout and self-reported gout or \gls{ult} use definitions, whereas, rs7929627 was the top \gls{snp} for the \gls{ult} usage, and Winnard definitions. None of the top \glspl{snp} were the same as reported by @Kottgen2013. 
+
+
+The total number of genome-wide significant \glspl{snp} was `r nom_snps$hosp %>% length()` for the hospital definition, `r nom_snps$self %>% length()` for the self-reported gout definition, `r nom_snps$ult %>% length()` for the \gls{ult} use definition, `r nom_snps$winnard %>% length()` for the Winnard definition, and `r nom_snps$selfult %>% length()` for the self-reported gout or \gls{ult} use definition. There was considerable overlap between the definitions in the \glspl{snp} that met the nominal significance threshold of P < 1x10^-5^ (Figure \@ref(fig:ukOverlap)). There were five main regions of the genome that had peaks of association with gout. These were at _GCKR_ on chromosome 2, _SLC2A9_ and _ABCG2_ on chromosome 4, the _SLC17A1-SLC17A3_ region on chromosome 6, and the _SLC22A11-SLC22A12_ region on chromosome 11 (Figure \@ref(fig:manhatSelfUltAgeSexBmi)). Only the peaks at _SLC2A9_ and _ABCG2_ reached genome-wide significance in the hospital definition.
+
+There were a total of ten top \glspl{snp} from seven genes that were associated with gout at a genome-wide significance threshold, across the definitions used (Table \@ref(tab:ukgwas)). The top \gls{snp} for each locus differed between definitions for _GCKR_ and _SLC2A9_, and _SLC22A12_. _GCKR_ had the top \gls{snp} for self-report of gout, self-report of gout or \gls{ult} use, or \gls{ult} use all had the top \gls{snp} as rs780093, whereas the top \gls{snp} for the Winnard definition was rs780094. The top \gls{snp} was rs9994216 in _SLC2A9_ for the self-reported gout definition, and rs4697701 for the \gls{ult} usage, self-report of gout, and the Winnard definitions. _SLC22A12_ had rs11231837 for the top \gls{snp} for the self-reported gout and self-reported gout or \gls{ult} use definitions, whereas, rs7929627 was the top \gls{snp} for the \gls{ult} usage, and Winnard definitions. None of the top \glspl{snp} were the same as reported by @Kottgen2013 in Table 1.
+
+The reason for the difference in the reported top \glspl{snp} is due to minor differences in genotyping rates between the \glspl{snp}. Another reason that explains the difference is the @Kottgen2013 \glspl{snp} were reported based on association with urate levels, as opposed to gout, where the top \gls{snp} differed between definitions this again can be attributed to genotyping rates. In the case of _GCKR_ and _SLC22A12_ the variants were in complete \gls{ld} but had minutely different genotyping rates. In the case of _ABCG2_ and _SLC17A3_ the reported variants were in complete \gls{ld} with the reported corresponding @Kottgen2013 \gls{snp}. The effect sizes were all extremely similar and consistent with the lead \glspl{snp} that were previously reported.
 
 
 
-_Why were they different from Kottgen?_
 
-Likely the ukbb snps weren't in the hapmap2 reference panel
+<!-- _Why were they different from Kottgen?_ -->
 
-SLC2A9
 
-- kot = rs12498742
-- uk = rs9994216 / rs4697701 (R^2^ = 0.9356) rs734553 (0.6285 / 0.6929 )
-- r^2^ = 0.7409 / 0.8121 / 0.8617
+<!-- A reason why they were not necessarily the reported in kotgen table 1 is that the kottgen snps are based on urate -->
 
-ABCG2
 
-- kot = rs2231142
-- uk = rs4148155
-- r^2^ = 1.0 GBR
+<!-- SLC2A9 -->
 
-GCKR
+<!-- - kot = rs12498742 -->
+<!-- - uk = rs9994216 / rs4697701 (R^2^ = 0.9356) rs734553 (0.6285 / 0.6929 ) -->
+<!-- - r^2^ = 0.7409 / 0.8121 / 0.8617 -->
 
-- kot = rs1260326
-- uk = rs780093 / rs780094 (r^2^ = 1.0)
-- r^2^ = 0.8646 / 0.8646
+<!-- ABCG2 -->
 
-SLC17A1
+<!-- - kot = rs2231142 -->
+<!-- - uk = rs4148155 -->
+<!-- - r^2^ = 1.0 GBR -->
 
-- kot = rs1165151
-- uk = rs1165195
-- r^2^ = 0.9309
+<!-- GCKR -->
 
-SLC17A3
+<!-- - kot = rs1260326 -->
+<!-- - uk = rs780093 / rs780094 (r^2^ = 1.0) -->
+<!-- - r^2^ = 0.8646 / 0.8646 -->
 
-- kot = rs1165151
-- uk =  rs1747550
-- r^2^ = 1.0
+<!-- SLC17A1 -->
 
-SLC22A12
+<!-- - kot = rs1165151 -->
+<!-- - uk = rs1165195 -->
+<!-- - r^2^ = 0.9309 -->
 
-- kottgen = rs478607
-- uk = rs11231837 / rs7929627 r^2^ = 1.0
-- r^2^ = 0.8485 / 0.8485
+<!-- SLC17A3 -->
 
-NRXN2
+<!-- - kot = rs1165151 -->
+<!-- - uk =  rs1747550 -->
+<!-- - r^2^ = 1.0 -->
 
-- kot = rs478607 
-- uk = rs10897521
-- r^2^ = 0.8485
+<!-- SLC22A12 -->
 
-(ref:ukOverlap) Overlap of markers that reached nominal genome-wide significance between the different gout classifications.
+<!-- - kottgen = rs478607 -->
+<!-- - uk = rs11231837 / rs7929627 r^2^ = 1.0 -->
+<!-- - r^2^ = 0.8485 / 0.8485 -->
+
+<!-- NRXN2 -->
+
+<!-- - kot = rs478607  -->
+<!-- - uk = rs10897521 -->
+<!-- - r^2^ = 0.8485 -->
+
+(ref:ukOverlap) Overlap of markers that reached nominal genome-wide significance between the different gout classifications. The upper histogram indicates the size of the intersection adn the left histogram indicates the total number of nominally significant \glspl{snp} by gout definition.
 
 ```{r ukOverlap, fig.cap = '(ref:ukOverlap)'}
-listInput <- list(hosp = hosp_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
-                  self = self_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
-                  ult = ult_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
-                  selfult = selfult_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
-                  winnard = winnard_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP)
+listInput <- list(`Hospital` = hosp_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
+                  `Self-report` = self_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
+                  ULT = ult_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
+                  `Self-report or ULT` = selfult_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP),
+                  Winnard = winnard_asb %>% filter(P < 1e-5, nchar(A1) ==1 ) %>% pull(SNP)
                   )
 
 UpSetR::upset(UpSetR::fromList(listInput), order.by = "freq", text.scale = 1.3, nintersects = NA )
@@ -416,7 +415,7 @@ UpSetR::upset(UpSetR::fromList(listInput), order.by = "freq", text.scale = 1.3, 
 
 
 ```{r}
-purrr::map_dfr(names(nom_snps), ~ nom_snps[[.x]] %>% filter(SYMBOL %in% c(kot_t1$grail_gene, kot_t1$closest_gene)) %>% mutate(group = .x)) %>% arrange(CHR,SYMBOL) %>% select(-SE) %>% filter(P < 5e-8) %>% mutate(P = as.character(P)) %>% kable(, digits = 2, caption = '(\\#tab:ukgwas) Top genome-wide significant SNPs by gout definition')
+purrr::map_dfr(names(top_snps), ~ top_snps[[.x]] %>% filter(SYMBOL %in% c(kot_t1$grail_gene, kot_t1$closest_gene)) %>% mutate(group = .x)) %>% arrange(CHR,SYMBOL) %>% select(-SE) %>% filter(P < 5e-8) %>% mutate(P = as.character(P)) %>% select(-BP) %>% mutate(group = case_when(group == "hosp" ~ 'Hospital',group == 'self' ~ "Self-report", group == "ult" ~ 'ULT', group == 'selfult'~ "Self-report or ULT",group == 'winnard' ~ "Winnard",  TRUE ~ group), P = purrr::map_chr(as.numeric(P), ~ format_p_md(p = .x, format = 'latex'))) %>% mutate(effect = paste0(OR, ' [',L95,'-',U95,'], ',P)) %>% select(CHR, group, SYMBOL,SNP, A1, effect)%>%  kable(.,col.names = c("Chromosome","Definition","Gene name", "Marker","A1","OR [95\\% CI], P"), digits = 2, caption = '(\\#tab:ukgwas) Top genome-wide significant SNPs by gout definition', booktabs = TRUE, format='latex', escape = FALSE)
 ```
 
 
@@ -432,9 +431,9 @@ txdb_gene_annotate(dat %>% filter(P < 5e-8, nchar(A1) ==1 ) %>% mutate(chrom = p
 
 
 
-manhattan plot for the self ult adjusted for age, sex and bmi \@ref(fig:manhatSelfUltAgeSexBmi)
+<!-- manhattan plot for the self ult adjusted for age, sex and bmi figure \@ref(fig:manhatSelfUltAgeSexBmi) -->
 
-(ref:manhatSelfUltAgeSexBmi) _Manhattan plot for Gout GWAS adjusted for age and sex_ and \gls{bmi} using the self-reported gout or \gls{ult} usage gout definition. The dotted line indicates the genome-wide significance threshold level of P = 5x10^-8^.
+(ref:manhatSelfUltAgeSexBmi) Manhattan plot for association with gout, adjusted for age and sex and \gls{bmi} using the self-reported gout or \gls{ult} usage gout definition. The dotted line indicates the genome-wide significance threshold level of P = 5x10^-8^.
 
 ```{r manhatSelfUltAgeSexBmi, echo = FALSE, fig.cap='(ref:manhatSelfUltAgeSexBmi)', fig.width=7, fig.asp=1, out.width= '95%', fig.align='center'}
 knitr::include_graphics('images/05_selection_and_association/self_ult_age_sex_bmi.png')
@@ -459,7 +458,7 @@ ALL GROUP: the most significant snps are from ABCG2. SLC2A9 also features highly
 
 #### Heritability Explained
 
-To see if there was a difference between gout classifications in the genetic component of the variance explained by an additive model in gout, heritability estimates were calculated for each gout classification. To do this, 10000 controls were randomly selected and were used with each different gout criteria and heritability estimates for each chromosome were calculated using GCTA 1.26.0 [@Yang2011; @Yang2011part]. The heritability estimates were 0.289 (SE 0.034) for the self-report of gout or ULT use definition, 0.283 (SE 0.036) for the self-report of gout definition, 0.282 (SE 0.040) for the Winnard definition, 0.308 (SE 0.044) for the ULT use definition and 0.236 (SE 0.160) for the hospital diagnosis definition. There were no statistically significant differences between the heritability estimates of any of the different classifications. The heritability estimates were similar to estimates of genetic variance of serum urate [@Kottgen2013]
+To see if there was a difference between gout classifications in the genetic component of the variance explained by an additive model in gout, heritability estimates were calculated for each gout classification. To do this, 10000 controls were randomly selected and were used with each different gout criteria and heritability estimates for each chromosome were calculated using GCTA 1.26.0 [@Yang2011; @Yang2011part]. The heritability estimates were 0.289 (SE 0.034) for the self-report of gout or ULT use definition, 0.283 (SE 0.036) for the self-report of gout definition, 0.282 (SE 0.040) for the Winnard definition, 0.308 (SE 0.044) for the ULT use definition and 0.236 (SE 0.160) for the hospital diagnosis definition. There were no statistically significant differences between the heritability estimates of any of the different classifications. The heritability estimates were similar to the estimates of genetic variance of serum urate [@Kottgen2013].
 
 
 
@@ -468,7 +467,7 @@ To see if there was a difference between gout classifications in the genetic com
 
 
 
-### European selection 
+### Comparison of haplotypic selection with gout \gls{gwas} in European populations
 
 ```{r}
 # ihs and nsl sig markers
@@ -478,11 +477,11 @@ sig_nsl_val <- readRDS('~/data/NZ_coreExome_1kgp/haplotype/sig_nsl_values_with_g
 ```
 
 
-In order to investigate the relationship between the haplotypic selection results and the gout \gls{gwas} using the UK Biobank, the significant results for \gls{ihs} and \gls{nsl} for \gls{gbr} from the \gls{1kgp} were compared to those for the \gls{gwas}. Given that the classification of self-reported gout or on \gls{ult} had the best performance, it was selected as the gout definition to use.
+In order to investigate the relationship between the haplotypic selection results and the gout \gls{gwas} using the UK Biobank, the significant results for \gls{ihs} and \gls{nsl} for \gls{gbr} from the \gls{1kgp} (calculated on the data used in chapter \@ref(selectionResults)) were compared to the results for the \gls{gwas} using the UK Biobank. Given that the classification of self-reported gout or on \gls{ult} had the best performance, it was selected as the gout definition to use.
 
-There were no \gls{ihs} \glspl{snp} that also had P < 5x10^-5^ in the \gls{gwas}. If the significance threshold for \gls{ihs} was reduced to |\gls{ihs}| > 2 (approximately the 5% extreme most values), then there were three \glspl{snp}, all located at _SLC22A12_ or within 1kb, that were genome-wide significant in the \gls{gwas} (rs505802, rs9734313, and rs559946), and four \glspl{snp} that were nominally significant.
+There were no \gls{ihs} \glspl{snp} that also had P < 10^-5^ in the \gls{gwas}. If the significance threshold for \gls{ihs} was reduced to |\gls{ihs}| > 2 (approximately the 5% extreme most values), then there were three \glspl{snp}, all located at _SLC22A12_ or within 1 kb, that were genome-wide significant in the \gls{gwas} (rs505802, rs9734313, and rs559946), and four \glspl{snp} that were nominally significant. There were `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had an |\gls{ihs}| > 2 and in the gout \gls{gwas} P < 0.01, this decreased to `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 1e-3) %>% NROW()`, with a \gls{gwas} P threshold of 1x10^-3^.
 
-There was a single marker - rs7185008 - that had both a significant \gls{nsl} score, and had a nominally significant \gls{gwas} P-value (P = 1.8x10^-5^, adjusted for age, sex, and \gls{bmi}). 
+There was a single marker, rs7185008, that had both |\gls{nsl}| > 2 (-2.22), and had a nominally significant \gls{gwas} P-value (P = 1.8x10^-5^, adjusted for age, sex, and \gls{bmi}). If the thresholds were relaxed, there were `r ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had an |\gls{nsl}| > 2 and in the gout \gls{gwas} P < 0.01, this decreased to `r ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 1e-3) %>% NROW()`, with a \gls{gwas} P threshold of 1x10^-3^.
 
 ```{r, message = FALSE}
 f <- list.files('~/data/ukbiobank_gwas/filtered_p0.05/', full.names = TRUE)
@@ -492,20 +491,22 @@ ukbb_p05_ihs2 <- sig_ihs_val %>% filter(pop == 'GBR', abs(statvalue) > 2.0 ) %>%
 ukbb_p05_nsl2 <- sig_nsl_val %>% filter(pop == 'GBR', abs(statvalue) > 2.0 ) %>% inner_join(., selfult_asb_p0_05, by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% select(-gene_chrom, -STAT, -TEST)
 ```
 
-There were `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had an |\gls{ihs}| > 2 and in the gout \gls{gwas} P < 0.01, this decreased to `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 1e-3) %>% NROW()`, with a \gls{gwas} P threshold of 1x10^-3^.
 
-the snps that were for ihs > 2 and 
+
+the snps that had an |\gls{ihs}| > 2 and a \gls{gwas} P < 1x10^-5% were rs12104449 (OR 1.275 [1.160-1.402], P = 4.638 x 10^-07^), rs505802, rs9734313, and rs559946
+
+PTPN11 ADAM10, SLC22A12
 ```{r}
-ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 1e-5) 
+ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 1e-5)
 ```
 
 
 ```{r, echo = TRUE}
-ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% pull(genename) %>% unique()
+ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 1e-4) %>% pull(genename) %>% unique()
 ```
 
 ```{r, echo = TRUE}
-ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% ggplot(., aes(x = -log10(P), y = statvalue)) + geom_point()
+ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% ggplot(., aes(x = -log10(P), y = statvalue)) + geom_point() + geom_vline(xintercept = 3.5)
 ```
 
 
@@ -527,14 +528,14 @@ ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% pull(genename) %>% u
 ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% ggplot(., aes(x = -log10(P), y = statvalue)) + geom_point()
 ```
 
-### Polynesian GWAS and Selection
+### Comparison of haplotypic selection with gout \gls{gwas} in Polynesian populations
 
 
 **PPARGC1A**
 
 
-```{r}
-polyGout <- read.table('~/data/PolyGwas/polynesian_gout_CoreExome24v1.0-1_rsIDconverted.assoc.logistic.tab', header = TRUE, stringsAsFactors = FALSE)%>%filter(TEST == "ADD") %>% separate("SNP", c("SNP","version"))
+```{r, warning = TRUE, message = FALSE}
+polyGout <- read_delim('~/data/PolyGwas/polynesian_gout_CoreExome24v1.0-1_rsIDconverted.assoc.logistic.tab', col_names = TRUE, delim = '\t')%>%filter(TEST == "ADD", !(A1 %in% c("I","D") )) %>% separate(., col = "SNP", into = c("SNP","version"), sep = "_", fill = 'right')
 ```
 
 ```{r}
@@ -552,12 +553,15 @@ In order to try and prioritise the variants of the \gls{gwas}, combining the res
 
 
 ```{r}
- sig_ihs_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 5e-2, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% spread(pop, statvalue) %>% arrange(P) %>% filter((!is.na(CIM) & !is.na(NZM)) | (!is.na(TON) & !is.na(SAM))) %>% filter(abs(NZM) > 2.6 | abs(CIM) > 2.6 | abs(SAM) > 2.6 | abs(TON) > 2.6) %>% select(-TEST, -statid, -contains('gene_'), -ensgeneid, -NMISS, -sig, -STAT, -chrom_end) %>% kable(., longtable = TRUE, booktabs = TRUE, format = 'latex', digits = 3)
+sig_ihs_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 5e-2, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% spread(pop, statvalue) %>% arrange(P) %>% filter((!is.na(CIM) & !is.na(NZM)) | (!is.na(TON) & !is.na(SAM))) %>% filter(abs(NZM) > 2.6 | abs(CIM) > 2.6 | abs(SAM) > 2.6 | abs(TON) > 2.6) %>% mutate( P = purrr::map_chr(as.numeric(P), ~ format_p_md(p = .x, format = 'latex'))) %>% mutate(effect = paste0(OR, ' [',L95,'-',U95,'], ',P)) %>% select(-superpop,-(OR:P), -gene_start, -gene_end, -TEST, -statid, -contains('gene_'), -ensgeneid, -NMISS, -sig, -STAT, -chrom_end) %>% select(-version)%>%  kable(., longtable = TRUE, booktabs = TRUE, format = 'latex', digits = 3) %>% kable_styling(font_size = 10)
 ```
 
 ```{r, echo = TRUE}
-sig_ihs_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 0.01, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% ggplot(., aes(x = -log10(P), y = statvalue, colour = pop)) + geom_point()
+sig_ihs_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 0.01, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% ggplot(., aes(x = -log10(P), y = statvalue, colour = pop)) + geom_point() + geom_hline(yintercept = c(2,-2))
 ```
+
+
+
 
 ```{r, echo = TRUE}
 sig_nsl_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 0.01, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% ggplot(., aes(x = -log10(P), y = statvalue, colour = pop)) + geom_point()
@@ -571,14 +575,47 @@ poly_n$nsl <- sig_nsl_val %>% filter(superpop == 'POL') %>% inner_join(., polyGo
 ```
 
 
-Compared to the \gls{gwas} for gout with the UK Biobank, the Polynesian \gls{gwas} only had `r poly_n$tenNeg4` \glspl{snp} with a P < 10^-4^
+Compared to the \gls{gwas} for gout with the UK Biobank, the Polynesian \gls{gwas} only had `r poly_n$tenNeg4` \glspl{snp} with a P < 10^-4^.
 
 > There were `r poly_n$ihs %>% length()` snps that had an |\gls{ihs}| > 2 and P < 10^-4^. With nls there were similar/different snps. The snps that were in common between the two statitics were XXX.
 
 > CNT4N
 
+```{r, eval = FALSE}
+polyGout %>% filter(between(BP, 2140497, 3099645), CHR == 3, P < 0.05) %>% arrange(P)
+```
 
 
+CNTN4 has some of the strongest signal of selection from \gls{ihs} and \gls{nsl} (section \@ref(polyihs)). The association with gout in Polynesian had four \glspl{snp} with P < 0.05, rs9849237 (P = 0.03173), rs2320375 (P = 0.03250), rs2728076 (P = 0.03468), and rs6763008 (P = 0.03932)
+
+> PPARGC1A
+
+rs1873532 ld with rs8192678 is 0.976 in EAS, no sign of association at that snp, but there is an 2.6 > ihs > 2 for nzm/sam/ton. association consistent with cadzow2016, selection just outside of the 1% threshold 
+
+
+
+- The \glspl{snp} with the most extreme \gls{ihs} and \gls{nsl} values tended to have the the weakest associations with gout.
+- there were more snps with nsl than ihs
+- the snps that fell in the < 10^-4^ range,   
+
+```{r, echo = TRUE}
+ sig_ihs_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 1e-4, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% select(-gene_chrom, -TEST, -ensgeneid, -STAT, -sig, -statid)  %>% mutate( P = purrr::map_chr(as.numeric(P), ~ format_p_md(p = .x, format = 'latex'))) %>% mutate(effect = paste0(OR, ' [',L95,'-',U95,'], ',P)) %>% select(-superpop,-(OR:P), -gene_start, -gene_end) %>% kable(., format = 'latex', longtable = TRUE, booktabs = TRUE)
+```
+
+ihs + gwas
+
+- CIM rs7856710 (no gene)
+- TON: rs17013182 (IBSP), rs2725220, rs2725215, rs2728108 (PKD2), rs1871744, rs2231142 (ABCG2)
+
+```{r, echo = TRUE}
+ sig_nsl_val %>% filter(superpop == 'POL') %>% inner_join(., polyGout %>% filter(P < 1e-4, TEST == "ADD"), by = c("chrom" = "CHR", "chrom_start" = "BP")) %>% select(-gene_chrom, -TEST, -ensgeneid, -STAT, -sig, -statid)
+```
+
+nsl + gwas
+
+- only results from western polynesian
+- 3 snps in SAM,  rs2725220, rs2725215 both PKD2, and rs4969131 from SLC39A11 
+- TON: rs17013182 (IBSP), rs2725220, rs2725215, , rs2728108 (PKD2), rs1871744, rs2231142 (ABCG2), and rs6944596 (CPVL/CHN2)
 
 ## Chapter Discussion
 
@@ -598,7 +635,7 @@ Compared to the \gls{gwas} for gout with the UK Biobank, the Polynesian \gls{gwa
 
 UKBB paper discussion
 
-The UK Biobank had a larger number of cases for the gout \gls{gwas} than @Kottgen2013. This increase in cases reflects the increase in strength of association that was seen. In the SUGAR paper [@Dalbeth], the definition that provided the highest specificity (82%) and sensitivity (72%) was self-reported gout or on \gls{ult} when tested against the mono-sodium urate crystal identification as the gold standard. Consistent with this, this study found that the self-report of gout or \gls{ult} use definition also provided the highest precision from the definitions used, and supports the use of this definition when better gout classification methods are not available, such as \gls{acr} or mono-sodium urate crystal identification.
+The UK Biobank had a larger number of cases for the gout \gls{gwas} than @Kottgen2013. This increase in cases reflects the increase in strength of association that was seen. In the SUGAR paper [@Dalbeth2016], the definition that provided the highest specificity (82%) and sensitivity (72%) was self-reported gout or on \gls{ult} when tested against the mono-sodium urate crystal identification as the gold standard. Consistent with this, this study found that the self-report of gout or \gls{ult} use definition also provided the highest precision from the definitions used, and supports the use of this definition when better gout classification methods are not available, such as \gls{acr} or mono-sodium urate crystal identification.
 
 The different definitions of gout used in this study may represent the different disease presentations or patient populations. Not all patients were captured by all criteria, and the Winnard definition was not as good as self-report of gout or \gls{ult}, despite a similarity in definitions, and also had lower precision in the genetic association. The hospital diagnosis definition had the lowest prevalence and was restrictive, making it the least likely to capture most people with gout. One third of the people that met this definition did not meet any of the self-report definitions, both of gout, and/or \gls{ult} usage. There are a few reasons that might explain this, first the hospitalised population may have a different disease presentation from those in the community identified by self-report or \gls{ult} use. Secondly, a diagnosis of gout made in a hospital my subsequently be revised to a different diagnosis, this is not taken into account with the current methodology. Therefore, when self report information is available it is recommended that the self-report of gout or \gls{ult} use be used as the definition to define cases.
 
@@ -606,7 +643,7 @@ Each of the gout definitions tested had genome-wide significance for \glspl{snp}
 
 Heritability estimates for the variance attributed to the additive effects of common \glspl{snp} of 0.282-0.308 (excluding the hospital definition) were in line with those reported by @Kottgen2013, with the same approach using the GCTA software of 0.27 to 0.41 for serum urate levels. The comparability between the heritability estimates for gout and serum urate by common genetic variants suggests the genetic heritabilities of serum urate levels and gout is similar. However, also contributing to the risk of gout are environmental factors, such as diet and medications. Because the estimates are constructed under an additive model, it does not take into account the non-additive variance, such as gene-gene or gene-environment interactions, or the effect of structural variants such as copy number variations.
 
-
+- the gwas is also very similar to that which was done as part of the phenome-wide gwas
 
 <!-- - all definitions tested abcg2/slc2a9 were genome-wide significant -->
 <!-- - large effect sizes -> effect sizes in GWAS of control of SU levels - consistent with their role in regulation of SU and gout risk -->
@@ -686,7 +723,7 @@ There was limited selection for gout and urate associated loci in the \gls{gbr} 
 
 <!-- Polynesian Gout - actual command run -->
 <!-- plink2 \ -->
-<!--   --bfile QC1_7-FullMerge1.0and1.1_ExDup_MattBrown_Czech-plus_rsIDconverted \ -->
+  --bfile QC1_7-FullMerge1.0and1.1_ExDup_MattBrown_Czech-plus_rsIDconverted \
 <!--   --pheno polynesian_gout-affection.pheno \ -->
 <!--   --logistic \ -->
 <!--   --ci 0.95 \ -->
